# strategicLearning

./: .gitattributes  .gitignore  README.md  README_TRACE_GENERATOR.md  data_parallel.py  data_parallel_Qwen-QwQ-32B.py  data_parallel_deepscaler_1_5_B_gen.py  data_parallel_qwq_deepscaler_train_data.py  deepspeed_config.json  gen_parquet_from_jsonl.py  gen_sft_grpo_tweak_dataset.py  gen_tweak_dataset.py  generate_traces_gsm8k.py  grpo_strategic_trainer.py  pyproject.toml  ray_distributed.py  strat.yaml  strat_run_deepscaler_1.5b_24k-n1.sh  strat_run_deepscaler_1.5b_24k-n2.sh  strat_run_deepscaler_1.5b_24k-n4.sh  strat_run_deepscaler_1.5b_24k-n8.sh  strat_run_deepscaler_1.5b_24k.sh  strat_run_deepscaler_1.5b_24k_iterative.sh  test_data_parallel.py  trace_generator.py  train_deepscaler_1_5_b_grpo_vLLM.py  train_grpo_bnb_4bit_gsm8k.py  train_grpo_gsm8k.py  train_grpo_strategic_gsm8k.py  train_grpo_vLLM.py  train_grpo_vLLM_threa_safe.py
DeepScaleR-eval/: AIME_1983_2024-matches-bm-25.ipynb  ai_manual_gen_problems.ipynb  aime24_to_jsonl.ipynb  aime_eval_analysis.ipynb  aime_visualization.ipynb  baseten.ipynb  deepscaler-matches-bm-25.ipynb  dpo_dsr1_tweak_dataset.jsonl  eval_check-dpo-light-r1-full-data.ipynb  eval_check.ipynb  eval_check.py  eval_gen_problems.ipynb  gen_teacher.ipynb  gen_teacher_baseten.ipynb  grpo_tweak_dataset.jsonl  light-r1-dpo-ripe_deepseek-r1.ipynb  light-r1-matches-bm-25.ipynb  match_gen_analysis.ipynb  match_gen_analysis.py  mathematicsdictionary.com.html  ripe_clean_dataset.jsonl  ripe_dataset.jsonl  s1-full-59k-matches-bm-25.ipynb  view_parquet.py  (+5 more)
(+130 files in other folders)
